# pollen-vision

./: .gitattributes  .gitignore  README.md  gitattributes_example  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  publish_pypi.yml  pytest.yml
assets/: .gitattributes
config_files/: CONFIG_OAK_D_PRO.json
docs/: convention_maths.md
examples/: SDKWrapper_example.py  live_pcl.py  teleopWrapper_example.py  test.py  two_SDKWrappers_example.py
examples/camera_wrappers_examples/: SDKWrapper_example.py  live_pcl.py  live_pcl_orbbec.py  live_pcl_realsense.py  live_pcl_tof.py  teleopWrapper_example.py  tof_example.py  two_SDKWrappers_example.py
examples/vision_models_examples/: Image tagging - RAM.ipynb  Object Detection OWL-ViT.ipynb  Object Segmentation - Mobile SAM.ipynb  RAM.ipynb
gradio/: app.py
pollen_vision/checkpoints/: .gitignore  mobile_sam.pt
pollen_vision/config_files/: CONFIG_CUSTOM_SR.json  CONFIG_IMX296.json  CONFIG_OAK_D_PRO.json
pollen_vision/config_files_vision/: CONFIG_AR0234_TOF.json  CONFIG_IMX296_TOF.json  CONFIG_SR.json
pollen_vision/pollen_vision/: perception.py
pollen_vision/pollen_vision/camera_wrappers/: __init__.py  camera_wrapper.py
pollen_vision/pollen_vision/camera_wrappers/basler/: basler_wrapper.py
pollen_vision/pollen_vision/camera_wrappers/basler/calibration/: acquire.py  check_epilines.py
pollen_vision/pollen_vision/camera_wrappers/depthai/: README.md  __init__.py  cam_config.py  sdk.py  teleop.py  tof.py  utils.py  wrapper.py
pollen_vision/pollen_vision/camera_wrappers/depthai/calibration/: .gitignore  README.md  acquire.py  check_epilines.py  export_calib.py  fisheye_undistort.py  flash.py  test_flash.py  (+3 more)
pollen_vision/pollen_vision/camera_wrappers/orbbec/: orbbec_wrapper.py
pollen_vision/pollen_vision/camera_wrappers/pollen_sdk_camera/: pollen_sdk_camera_wrapper.py
pollen_vision/pollen_vision/camera_wrappers/realsense/: realsense_wrapper.py
pollen_vision/pollen_vision/perception/: __init__.py  perception.py
pollen_vision/pollen_vision/perception/utils/: __init__.py  objects_filter.py  pcl_visualizer.py  utils.py
pollen_vision/pollen_vision/utils/: __init__.py  annotator.py  labels.py  objects_filter.py  pcl_visualizer.py  recorder.py  utils.py
pollen_vision/pollen_vision/vision_models/: utils.py
pollen_vision/pollen_vision/vision_models/monocular_depth_estimation/: __init__.py  depth_anything_wrapper.py
pollen_vision/pollen_vision/vision_models/object_detection/: __init__.py
pollen_vision/pollen_vision/vision_models/object_segmentation/: __init__.py
pollen_vision/pollen_vision/vision_models/perception/: perception.py
pollen_vision/pollen_vision/vision_models/tracking/: __init__.py
pollen_vision/tests/: test_calib.py  test_config.py  test_utils.py  test_wrapper.py
pollen_vision/tests/data/: calibration_unit_tests.json  epilines.npz  meshes.npz  undistort_maps.npz  undistort_maps_fisheye.npz
scripts/: README.md  RECORD_SR.py  align_example.py  align_example_corrected.py  align_rgb_on_depth_test.py  annotate_video.py  aze.py  chatgpt.py  fov_calculator.py  grasp_demo.py  minimal_tof_test.py  read_calib.json  recorder.py  test.py  test_yolo_world.py  tof_align_example.py  tof_align_example_corrected.py  tof_and_encoding_test.py  tof_pcl_test.py  tof_point_cloud_luxonis.py  tof_test.py  tof_test_align.py  vanilla_tof_test.py  yolo_world_demo.py
src/: cvWrapper_example.py  depthWrapper_example.py  main.py  teleopWrapper_example.py
src/calibration/: README.md  acquire.py  check_epilines.py  flash.py  generate_board.py  restore_calibration_backup.py
src/calibration/auto_calib/: auto_calib.py  moves.py  record_positions.py  recording_acquire.pkl  recording_check_epilines.pkl  recording_think.pkl  recording_win.pkl
src/camera_wrappers/depthai/: cam_config.py  sdk.py  teleop.py  wrapper.py
src/camera_wrappers/depthai/calibration/: acquire.py  check_epilines.py  restore_calibration_backup.py
src/camera_wrappers/depthai_wrappers/: cam_config.py  sdk_wrapper.py  teleop_wrapper.py  wrapper.py
src/camera_wrappers/depthai_wrappers/calibration/: acquire.py  check_epilines.py  flash.py  restore_calibration_backup.py
src/checkpoints/: .gitattributes
src/config_files/: CONFIG_SR.json
src/depthai_wrappers/: cam_config.py  cv_wrapper.py  depth_wrapper.py  sdk_wrapper.py  teleop_wrapper.py  utils.py  wrapper.py
src/example/: celcius.py  foo.py  xterrabot.py
src/vision_models/: utils.py
src/vision_models/mobile_sam/: README.md  mobile_sam_wrapper.py
src/vision_models/owl_vit/: README.md  owl_vit_wrapper.py
src/vision_models/recognize_anything/: RAM_wrapper.py  README.md  README_TODO_REMOVE.md  example_objects_descriptions.json  generate_objects_descriptions.py
tests/: test_config.py  test_temperature.py  test_wrapper.py  test_xterrabot.py
(+12 files in other folders)
