[metadata]
name = pollen-vision
version = 0.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/python-template
description = Repository containing all software related to computer vision at Pollen
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    numpy==1.25.1
    depthai==2.22.0.0
    opencv-contrib-python==4.8.0.74

[options.packages.find]
where=src

[options.extras_require]
dev = black==23.10.1
      flake8==6.1.0
      pytest==7.4.3
      coverage==7.3.2
      mypy==1.6.1
      isort==5.12.0

[options.entry_points]
console_scripts = 

[flake8]
exclude = tests
max-line-length = 128
extend-ignore = E203
max-complexity = 10

[coverage:run]
branch=True

[coverage:report]
show_missing=True

[mypy]
ignore_missing_imports = True
exclude = tests
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True