[metadata]
name = pollen-vision
version = 1.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/pollen-vision
description = Repository containing all software related to computer vision at Pollen
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =pollen_vision
install_requires =
    numpy==1.25.1
    opencv-contrib-python==4.8.0.74

[options.packages.find]
where=pollen_vision

[options.package_data]
config_files =
  *.json
checkpoints = 
  *.pt
  *.pth

[options.extras_require]
all = mobile-sam @ git+https://github.com/pollen-robotics/MobileSAM
      ram @ git+https://github.com/pollen-robotics/recognize-anything
      depthai==2.24.0.0 
      black==23.10.1
      flake8==6.1.0
      pytest==7.4.3
      coverage==7.3.2
      mypy==1.8.0
      isort==5.13.2
vision = mobile-sam @ git+https://github.com/pollen-robotics/MobileSAM
         ram @ git+https://github.com/pollen-robotics/recognize-anything
depthai_wrapper = depthai==2.24.0.0
dev = black==23.10.1
      flake8==6.1.0
      pytest==7.4.3
      coverage==7.3.2
      mypy==1.8.0
      isort==5.13.2
         

[options.entry_points]
console_scripts = 

[flake8]
exclude = tests
max-line-length = 128
extend-ignore = E203
max-complexity = 10

[coverage:run]
branch=True

[coverage:report]
show_missing=True

[mypy]
ignore_missing_imports = True
exclude = tests
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True