[metadata]
name = pollen-vision
version = 2.0.1
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/pollen-vision
description = Repository containing all software related to computer vision at Pollen
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =pollen_vision
install_requires =
    numpy>=1.24.0,<=1.26.4
    opencv-contrib-python>=4.8.0.74, < 5.0.0.0

[options.packages.find]
where=pollen_vision

[options.package_data]
config_files =
  *.json
config_files_vision =
  *.json
checkpoints =
  *.pt
  *.pth

[options.extras_require]
all = mobile-sam @ git+https://github.com/pollen-robotics/MobileSAM
      ram @ git+https://github.com/pollen-robotics/recognize-anything
      datasets==2.18.0
      depthai==2.27.0.0
      datasets==2.18.0
      supervision==0.20.0
      inference-gpu[yolo-world]==0.9.13
      FramesViewer==1.0.2
      scikit-learn==1.2.2
      transformers==4.40.2
      openai==1.12.0
      # open3d==0.17.0
vision = mobile-sam @ git+https://github.com/pollen-robotics/MobileSAM
         ram @ git+https://github.com/pollen-robotics/recognize-anything
         datasets==2.18.0
         supervision==0.20.0
         inference-gpu[yolo-world]==0.9.13
         scikit-learn==1.2.2
         transformers==4.40.2
         FramesViewer==1.0.2
         openai==1.12.0
depthai_wrapper = depthai==2.27.0.0
realsense_wrapper = pyrealsense2==2.55.1.6486
gradio = gradio==4.21.0
open3d = open3d==0.17.0
dev = black==23.10.1
      flake8==6.1.0
      pytest==7.4.3
      coverage==7.3.2
      mypy==1.8.0
      isort==5.13.2


[options.entry_points]
console_scripts =

[flake8]
exclude = tests
max-line-length = 128
extend-ignore = E203
max-complexity = 10

[coverage:run]
branch=True

[coverage:report]
show_missing=True

[mypy]
ignore_missing_imports = True
exclude = tests
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True